--- a/css/style.css
+++ b/css/style.css
@@ -27,4 +27,5 @@ body{
     }
     div{
         background-image: url("https://cosmonerd.com.br//uploads/2017/05/corra-capa-post-cosmonerd.png");
+        background-size: 1350px;
     }
