--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,6 @@ body{
         color:yellow;
     }
     div{
-        background-image: url("https://cosmonerd.com.br//uploads/2017/05/corra-capa-post-cosmonerd.png");
-        background-size: 1400px;
+        background-image: url("https://prosalivre.com/wp-content/uploads/2017/05/corra-final-alternativo.png");
+        background-size: 1200px;
     }
